--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "pink",
+  "name": "filterall",
   "version": "0.1.0",
   "private": true,
-  "description": "Личный проект «Пинк» от HTML Academy",
+  "description": "Личный проект filterall",
   "devDependencies": {
+    "@htmlacademy/editorconfig-cli": "1.x",
     "autoprefixer": "6.7.x",
     "browser-sync": "2.18.12",
     "gulp": "3.9.1",
     "gulp-less": "3.3.0",
     "gulp-plumber": "1.1.0",
     "gulp-postcss": "6.4.0",
-    "@htmlacademy/editorconfig-cli": "1.x"
+    "pug": "^2.0.0-rc.2"
   },
   "scripts": {
     "test": "editorconfig-cli",
@@ -35,6 +36,7 @@
     "gulp-csso": "^3.0.0",
     "gulp-imagemin": "^3.3.0",
     "gulp-rename": "^1.2.2",
-    "run-sequence": "^1.2.2"
+    "run-sequence": "^1.2.2",
+    "pug": "^2.0.0-rc.2"
   }
 }
